<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@color/background">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/bar_login"
        android:textSize="26dp"
        android:textStyle="bold"
        android:textColor="@color/title"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#114c59"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text"
            android:textSize="16dp"
            android:gravity="left"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text"
            android:textSize="16dp"
            android:gravity="left" />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/title"
            android:textColor="@color/text"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/web"
            android:onClick="goToWeb"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:onClick="enterPressed"
            android:background="@color/button"
            android:shadowColor="#00CFCACA"
            android:text="@string/btn_go"
            android:textColor="@color/text"
            android:textSize="26dp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>


</LinearLayout>