<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/bar_add"
        android:textSize="26dp"
        android:textStyle="bold"
        android:textColor="@color/title"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#114c59"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/icono_title"
                android:drawablePadding="10dp"
                android:textColor="@color/text"
                android:textSize="16dp"
                android:gravity="left"/>

            <EditText
                android:id="@+id/et_title"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:textColor="@color/text"
                android:textSize="16dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/icono_description"
                android:drawablePadding="10dp"
                android:textColor="@color/text"
                android:textSize="16dp"
                android:gravity="left"/>

            <EditText
                android:id="@+id/et_description"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:hint="@string/hint_description"
                android:inputType="text"
                android:textColor="@color/text"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/icono_year"
                android:drawablePadding="10dp"
                android:textColor="@color/text"
                android:textSize="16dp"
                android:gravity="left"/>

            <EditText
                android:id="@+id/et_year"
                android:layout_width="299dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:hint="@string/hint_year"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/text"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/icono_points"
                android:drawablePadding="10dp"
                android:textColor="@color/text"
                android:textSize="16dp"
                android:gravity="left"/>

            <EditText
                android:id="@+id/et_points"
                android:layout_width="299dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:hint="@string/hint_points"
                android:inputType="number"
                android:textColor="@color/text"
                android:textSize="16dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/icono_image"
                android:drawablePadding="10dp"
                android:textColor="@color/text"
                android:textSize="16dp"
                android:gravity="left"/>

            <EditText
                android:id="@+id/et_url"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:gravity="left"
                android:hint="@string/hint_url"
                android:inputType="textUri"
                android:textColor="@color/text"
                android:textSize="16dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:onClick="addFilm"
            android:background="@color/button"
            android:shadowColor="#00CFCACA"
            android:text="@string/btn_add"
            android:textColor="@color/text"
            android:textSize="26dp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

</LinearLayout>